Fix timezone bug when service is unreachable and switch mc server to use generational ZGC